<?xml version="1.0"?>
<package>
  <name>pluginlib_Rect</name>
  <version>0.1.10</version>
  <description>The pluginlib_Rect package</description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/pluginlib/Tutorials</url>
  <url type="bugtracker">https://github.com/ros/common_tutorials/issues</url>
  <url type="repository">https://github.com/ros/common_tutorials/</url>

  <author>Eitan Marder-Eppstein</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
    <pluginlib_Rect plugin="${prefix}/polygon_plugins.xml" />
  </export>
</package>