<?xml version="1.0"?>
<package format="2">
  <name>pluginlib_test</name>
  <version>0.0.0</version>
  <description>The pluginlib_test package</description>

  <maintainer email="robot@todo.todo">robot</maintainer>

  <license>TODO</license>

  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <pluginlib_test plugin="${prefix}/plan_plugins.xml" />
  </export>
</package>
